# bibfixer

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  app.py  pyproject.toml  sample_input.bib
bibfixer/: __init__.py  cli.py
bibfixer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
