[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bibfixer"
version = "0.1.1"
description = "Fixes and standardizes BibTeX using LLM + web search"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Takashi Ishida" }]
requires-python = ">=3.9"
dependencies = [
  "openai>=1.107.0,<2",
  "bibtexparser>=1.4.1,<2",
]

[project.scripts]
bibfixer = "bibfixer.cli:main"

[tool.setuptools]
packages = ["bibfixer"]

[tool.setuptools.package-data]
bibfixer = ["prompts/default.md"]


